...
        android:layout_marginStart="2dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="-2dp"
        tools:listitem="@layout/detalle_layout" />

    <Button
        android:id="@+id/btn_link"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-243dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="206dp"
        android:text="Comprar Manga"
        android:visibility="visible"/>

</RelativeLayout>

